Fix last news layout on tablets

--- a/src/sass/elements/_category.sass
+++ b/src/sass/elements/_category.sass
@@ -1,6 +1,7 @@
 .b-categories
   display: flex
   flex: 1
+  align-items: center
 
   .b-category:not(:last-child)
     margin-right: 20px
@@ -12,6 +13,8 @@
   display: flex
   flex: 1
   min-height: 455px
+  max-height: 700px
+  height: 100%
   z-index: $defaultZIndex
 
   &__image, &__image_wrapper
